# maestro-demos

./: .gitignore  CLI_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py  test_cli.py  zzz.py
.github/workflows/: test_demos.yaml
agents/crewai/activity_planner/: README.md
docs/: podman-setup.md
maestro_demos/: __init__.py  cli.py
tools/: run-demos.sh
workflows/activity-planner-crewai.ai/: README.md
workflows/activity-planner.ai/: README.md
workflows/cbom.ai/: agents.yaml
workflows/common/: doctor.sh  test.sh
workflows/ibm-summary.ai/: README.md
workflows/maestro-k/: README.md  agents.yaml  test.sh  tools.yaml  workflow.yaml
workflows/meta-agents-v2/: README.md
workflows/meta-agents-v2/agents_file_generation/: agents.yaml
workflows/meta-agents-v2/workflow_file_generation/: agents.yaml
workflows/meta-agents/activity-planner.ai/agents/: agents.yaml
workflows/meta-agents/activity-planner.ai/workflow/: agents.yaml
workflows/meta-agents/weather/agent/: agents.yaml
workflows/meta-agents/weather/workflow/: agents.yaml
workflows/portfolio/: README.md  agents.yaml
workflows/qaoa/: README.md  agents.yaml
workflows/qchem.ai/: README.md  agents.yaml
workflows/run-python-code-mcp/: README.md  agents.yaml  workflow.yaml
workflows/simple/: README.md  agents.yaml
workflows/summary.ai/: README.md  agents.yaml
workflows/summary2.ai/: README.md  agents.yaml  workflow.yaml
workflows/weather-checker.ai/: README.md
